--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">HuecosColombia</string>
     <string name="title_activity_maps">Map</string>
-    <string name="login_email_hint">Correo electrónico</string>
-    <string name="login_password_hint">Contraseña</string>
-    <string name="register_user">Registrarse</string>
+    <string name="email_hint">Correo electrónico</string>
+    <string name="password_hint">Contraseña</string>
+    <string name="signup_text">Registrarse</string>
     <string name="login_text">Ingresar</string>
-    <string name="role_admin">Admin</string>
+    <string name="repassword_hint">Confirmar contraseña</string>
+    <string name="name_hint">Nombre</string>
+    <string name="user_hint">Usuario</string>
 </resources>
