--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="all">Todos</string>
     <string name="to_finish">Terminar</string>
     <string name="done">Hecho</string>
+    <string name="publications">Publicaciones</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
